--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.9.2",
     "apisauce": "^2.0.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
