--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reduxsauce": "^1.2.0",
